--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -564,28 +564,28 @@ video {
   margin-right: auto;
 }
 
+.block {
+  display: block;
+}
+
 .flex {
   display: flex;
 }
 
-.h-24 {
-  height: 6rem;
+.h-32 {
+  height: 8rem;
 }
 
-.w-4\/5 {
-  width: 80%;
+.w-3\/4 {
+  width: 75%;
 }
 
 .w-auto {
   width: auto;
 }
 
-.w-3\/5 {
-  width: 60%;
-}
-
-.w-3\/4 {
-  width: 75%;
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .flex-row {
@@ -604,10 +604,6 @@ video {
   justify-content: space-between;
 }
 
-.gap-10 {
-  gap: 2.5rem;
-}
-
 .gap-20 {
   gap: 5rem;
 }
@@ -617,18 +613,27 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.text-slate-900 {
+.font-light {
+  font-weight: 300;
+}
+
+.text-slate-600 {
   --tw-text-opacity: 1;
-  color: rgb(15 23 42 / var(--tw-text-opacity));
+  color: rgb(71 85 105 / var(--tw-text-opacity));
 }
 
 *{
   transition: all 1s cubic-bezier(0.075, 0.82, 0.165, 1);
+  font-family: 'Roboto', sans-serif;
 }
 
 .dark .dark\:bg-black {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.dark .dark\:font-normal {
+  font-weight: 400;
 }
 
 .dark .dark\:text-white {
