--- a/src/pages/projects/project/project.styles.css
+++ b/src/pages/projects/project/project.styles.css
@@ -3,3 +3,7 @@
   /* background-color: yellow; */
   border: 2px solid blue;
 }
+
+.caption{
+  background-image: linear-gradient(to top, rgba(0,0,0,1), rgba(0,0,0,0.3));
+}
