--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -563,24 +563,12 @@ video {
   visibility: visible;
 }
 
-.fixed {
-  position: fixed;
-}
-
 .absolute {
   position: absolute;
 }
 
 .relative {
   position: relative;
-}
-
-.z-30 {
-  z-index: 30;
-}
-
-.-z-30 {
-  z-index: -30;
 }
 
 .z-20 {
@@ -594,16 +582,6 @@ video {
 .mx-auto {
   margin-left: auto;
   margin-right: auto;
-}
-
-.my-10 {
-  margin-top: 2.5rem;
-  margin-bottom: 2.5rem;
-}
-
-.my-4 {
-  margin-top: 1rem;
-  margin-bottom: 1rem;
 }
 
 .mt-10 {
@@ -626,6 +604,10 @@ video {
   margin-top: 1rem;
 }
 
+.mb-5 {
+  margin-bottom: 1.25rem;
+}
+
 .flex {
   display: flex;
 }
@@ -638,20 +620,16 @@ video {
   height: 8rem;
 }
 
-.h-\[\] {
-  height: ;
+.h-1 {
+  height: 0.25rem;
 }
 
-.h-\[100\] {
-  height: 100;
+.h-auto {
+  height: auto;
 }
 
 .h-\[100\%\] {
   height: 100%;
-}
-
-.h-48 {
-  height: 12rem;
 }
 
 .w-3\/4 {
@@ -672,22 +650,6 @@ video {
 
 .w-1\/4 {
   width: 25%;
-}
-
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-96 {
-  width: 24rem;
-}
-
-.w-\[\] {
-  width: ;
-}
-
-.w-\[100\%\] {
-  width: 100%;
 }
 
 .w-max {
@@ -744,10 +706,6 @@ video {
 
 .items-center {
   align-items: center;
-}
-
-.items-baseline {
-  align-items: baseline;
 }
 
 .justify-start {
@@ -810,14 +768,6 @@ video {
   border-radius: 0.25rem;
 }
 
-.rounded-full {
-  border-radius: 9999px;
-}
-
-.rounded-sm {
-  border-radius: 0.125rem;
-}
-
 .bg-slate-900 {
   --tw-bg-opacity: 1;
   background-color: rgb(15 23 42 / var(--tw-bg-opacity));
@@ -828,47 +778,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-purple-400 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(192 132 252 / var(--tw-bg-opacity));
-}
-
-.bg-purple-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(233 213 255 / var(--tw-bg-opacity));
-}
-
 .bg-purple-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(216 180 254 / var(--tw-bg-opacity));
-}
-
-.bg-gradient-to-t {
-  background-image: linear-gradient(to top, var(--tw-gradient-stops));
-}
-
-.from-blue-100 {
-  --tw-gradient-from: #dbeafe;
-  --tw-gradient-to: rgb(219 234 254 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.from-black {
-  --tw-gradient-from: #000;
-  --tw-gradient-to: rgb(0 0 0 / 0);
-  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
-}
-
-.to-slate-300 {
-  --tw-gradient-to: #cbd5e1;
-}
-
-.to-black {
-  --tw-gradient-to: #000;
-}
-
-.bg-cover {
-  background-size: cover;
 }
 
 .object-cover {
@@ -888,21 +800,6 @@ video {
   padding-right: 2.5rem;
 }
 
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
-
-.px-5 {
-  padding-left: 1.25rem;
-  padding-right: 1.25rem;
-}
-
-.py-2 {
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -915,10 +812,6 @@ video {
 
 .text-center {
   text-align: center;
-}
-
-.align-bottom {
-  vertical-align: bottom;
 }
 
 .text-5xl {
@@ -998,22 +891,6 @@ video {
 
 .hover\:z-20:hover {
   z-index: 20;
-}
-
-.hover\:z-30:hover {
-  z-index: 30;
-}
-
-.hover\:w-2:hover {
-  width: 0.5rem;
-}
-
-.hover\:w-2\/3:hover {
-  width: 66.666667%;
-}
-
-.hover\:w-1\/3:hover {
-  width: 33.333333%;
 }
 
 .hover\:scale-150:hover {
